# api-gateway

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  dependencies.py  exceptions.py  main.py  proxy.py  schemas.py
src/routes/: attributes.py  auth.py  cart.py  categories.py  order.py  products.py  users.py
src/schemas/: attributes.py  auth.py  cart.py  categories.py  order.py  products.py  users.py
src/services/: health.py
